--- a/videosdk/build.gradle
+++ b/videosdk/build.gradle
@@ -38,26 +38,33 @@ buildscript {
     }
 }
 
+ext {
+    firebase = '11.4.2'
+    retrofit2 = '2.3.0'
+    googleSupportLib = '26.0.0'
+}
+
+// all dependencies with potential conflicting libraries must go in ext{...} above
 dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation "com.google.firebase:firebase-database:${firebase}"
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.1'
 
-    compile 'com.google.firebase:firebase-auth:11.4.2'
-    compile 'com.android.support:appcompat-v7:26.0.0'
+    compile "com.google.firebase:firebase-auth:${firebase}"
+    compile "com.android.support:appcompat-v7:${googleSupportLib}"
     compile 'com.jakewharton.timber:timber:4.5.1'
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    compile "com.squareup.retrofit2:retrofit:${retrofit2}"
+    compile "com.squareup.retrofit2:adapter-rxjava2:${retrofit2}"
     compile 'com.google.code.gson:gson:2.8.2'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.5'
-    compile 'com.google.firebase:firebase-auth:10.0.1'
     testCompile 'junit:junit:4.12'
 }
 
