--- a/videosdk/build.gradle
+++ b/videosdk/build.gradle
@@ -52,8 +52,9 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
+    compile 'com.annimon:stream:1.1.9'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.1'
+    compile 'com.twilio:video-android:1.3.5'
     compile "com.android.support:recyclerview-v7:${googleSupportLib}"
     compile "com.google.firebase:firebase-auth:${firebase}"
     compile "com.android.support:appcompat-v7:${googleSupportLib}"
