--- a/videosdk/src/main/AndroidManifest.xml
+++ b/videosdk/src/main/AndroidManifest.xml
@@ -2,11 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dabkick.videosdk">
 
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true">
+
         <activity android:name=".livesession.LiveSessionActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/NoTitleBarTheme"/>
     </application>
 
