--- a/videosdk/build.gradle
+++ b/videosdk/build.gradle
@@ -55,7 +55,7 @@ dependencies {
     })
     compile 'com.annimon:stream:1.1.9'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.1'
-    compile 'com.twilio:video-android:1.3.5'
+    compile 'com.twilio:video-android:2.0.0-preview4'
     compile "com.android.support:recyclerview-v7:${googleSupportLib}"
     compile "com.google.firebase:firebase-auth:${firebase}"
     compile "com.android.support:appcompat-v7:${googleSupportLib}"
