refactor ParticipantModel into LivestreamPresenter

--- a/videosdk/src/main/AndroidManifest.xml
+++ b/videosdk/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:supportsRtl="true">
 
         <activity android:name=".livesession.LiveSessionActivity"
+            android:launchMode="singleInstance"
             android:screenOrientation="portrait"
             android:theme="@style/NoTitleBarTheme"/>
     </application>
