--- a/videosdk/build.gradle
+++ b/videosdk/build.gradle
@@ -68,6 +68,8 @@ dependencies {
     compile "com.squareup.okhttp3:logging-interceptor:${okhttp3}"
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.5'
+    compile "com.android.support:appcompat-v7:${googleSupportLib}"
+    compile "com.android.support:design:${googleSupportLib}"
     testCompile 'junit:junit:4.12'
 }
 
