--- a/videosdk/build.gradle
+++ b/videosdk/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile "com.squareup.okhttp3:okhttp:${okhttp3}"
     compile "com.squareup.okhttp3:logging-interceptor:${okhttp3}"
+    compile 'com.devbrackets.android:exomedia:4.0.3'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.5'
     compile "com.android.support:appcompat-v7:${googleSupportLib}"
