add Dagger2; rename OverviewModel to OverviewDatabase, Overview to OverviewModel

--- a/videosdk/build.gradle
+++ b/videosdk/build.gradle
@@ -43,6 +43,7 @@ ext {
     retrofit2 = '2.3.0'
     googleSupportLib = '26.0.0'
     okhttp3 = '3.8.0'
+    dagger2 = '2.11'
 }
 
 // all dependencies with potential conflicting libraries must go in ext{...} above
@@ -72,6 +73,12 @@ dependencies {
     compile "com.android.support:appcompat-v7:${googleSupportLib}"
     compile "com.android.support:design:${googleSupportLib}"
     testCompile 'junit:junit:4.12'
+
+    compile "com.google.dagger:dagger-android:${dagger2}"
+    compile "com.google.dagger:dagger-android-support:${dagger2}"
+    annotationProcessor "com.google.dagger:dagger-android-processor:${dagger2}"
+    annotationProcessor "com.google.dagger:dagger-compiler:${dagger2}"
+
 }
 
 apply plugin: 'me.tatarka.retrolambda'
