--- a/videosdk/build.gradle
+++ b/videosdk/build.gradle
@@ -79,6 +79,9 @@ dependencies {
     annotationProcessor "com.google.dagger:dagger-android-processor:${dagger2}"
     annotationProcessor "com.google.dagger:dagger-compiler:${dagger2}"
 
+    compile 'org.greenrobot:eventbus:3.1.1'
+
+
 }
 
 apply plugin: 'me.tatarka.retrolambda'
