1. id/recyclerview_livestream needs is back in its original position
2. Media drawer animates on top of this

3. Blue button overlapping the fragment has been corrected

4. The last row being hidden partially also has been corrected

5. Media fragment now shows video thumbnails as mentioned in the mock

6. Chat now scrolls to the latest msg

7. Chat layout changed as per the mock

--- a/videosdk/build.gradle
+++ b/videosdk/build.gradle
@@ -73,6 +73,7 @@ dependencies {
     compile "com.android.support:appcompat-v7:${googleSupportLib}"
     compile "com.android.support:design:${googleSupportLib}"
     compile 'com.github.jd-alexander:LikeButton:0.2.3'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
     testCompile 'junit:junit:4.12'
 
     compile "com.google.dagger:dagger-android:${dagger2}"
