1. Solved issue of layout above chat moving up when KB comes up for chatting

--- a/videosdk/src/main/AndroidManifest.xml
+++ b/videosdk/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:launchMode="singleInstance"
             android:screenOrientation="portrait"
             android:theme="@style/NoTitleBarTheme"
-            android:windowSoftInputMode="stateHidden|adjustPan"/>
+            android:windowSoftInputMode="stateHidden|adjustPan|adjustResize"/>
     </application>
 
 </manifest>
