--- a/videosdk/src/main/AndroidManifest.xml
+++ b/videosdk/src/main/AndroidManifest.xml
@@ -9,14 +9,13 @@
 
     <application
         android:allowBackup="true"
-        android:label="@string/app_name"
-        android:supportsRtl="true">
+        android:label="@string/app_name">
 
-        <activity android:name=".livesession.LiveSessionActivity"
-            android:launchMode="singleInstance"
+        <activity
+            android:name=".livesession.LiveSessionActivity"
             android:screenOrientation="portrait"
             android:theme="@style/NoTitleBarTheme"
-            android:windowSoftInputMode="stateHidden|adjustPan|adjustResize"/>
+            android:windowSoftInputMode="stateHidden|adjustResize|adjustPan"/>
     </application>
 
 </manifest>
