1.Removal of the scrollView from live chat activity

--- a/videosdk/src/main/AndroidManifest.xml
+++ b/videosdk/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
             android:name=".livesession.LiveSessionActivity"
             android:screenOrientation="portrait"
             android:theme="@style/NoTitleBarTheme"
-            android:windowSoftInputMode="stateHidden|adjustResize|adjustPan"/>
+            android:windowSoftInputMode="stateHidden|adjustPan"/>
     </application>
 
 </manifest>
