--- a/videosdk/build.gradle
+++ b/videosdk/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     buildToolsVersion "26.0.2"
 
     defaultConfig {
         minSdkVersion 17
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
 
@@ -41,13 +41,14 @@ buildscript {
 ext {
     firebase = '11.4.2'
     retrofit2 = '2.3.0'
-    googleSupportLib = '26.0.0'
+    googleSupportLib = '27.0.2'
     okhttp3 = '3.8.0'
     dagger2 = '2.11'
 }
 
 // all dependencies with potential conflicting libraries must go in ext{...} above
 dependencies {
+    compile project(':StageVideoView')
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation "com.google.firebase:firebase-database:${firebase}"
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -68,7 +69,6 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile "com.squareup.okhttp3:okhttp:${okhttp3}"
     compile "com.squareup.okhttp3:logging-interceptor:${okhttp3}"
-    compile 'com.devbrackets.android:exomedia:4.0.3'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.5'
     compile "com.android.support:appcompat-v7:${googleSupportLib}"
