--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
     compile project(":videosdk")
+    compile project(':StageVideoView')
 
 
     compile 'com.android.support:appcompat-v7:26.0.0'
